--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,6 @@
         }
       }
     },
-    "postAttachCommand": "code '/workspaces/rag_bootcamp/document_search/Section Extraction at Scale - Small.ipynb'"
+    "postAttachCommand": "code '/workspaces/rag_bootcamp/document_search/Section Extraction - 1 Document.ipynb' '/workspaces/rag_bootcamp/document_search/Section Extraction - 3 Documents.ipynb'"
   }
   
